# toolloom

./: .gitignore  README.md  pyproject.toml
examples/: basic_tool.py  registry_to_crewai.py  registry_to_fastmcp.py  registry_to_google_adk.py  registry_to_langchain.py  registry_to_langgraph.py  registry_to_openai_agents.py  registry_to_pydantic_ai.py
examples/skills/: math_strategy.md
tests/: test_adapter_imports.py  test_crewai_adapter.py  test_decorator.py  test_execution.py  test_fastmcp_adapter.py  test_google_adk_adapter.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_lint.py  test_openai_agents_adapter.py  test_pydantic_ai_adapter.py  test_registry.py  test_schema.py  test_skill_adapters.py  test_skills.py
toolloom/: __init__.py  cli.py  decorators.py  errors.py  introspection.py  lint.py  registry.py  schema.py  skills.py  spec.py
toolloom/adapters/: __init__.py  _shared.py  _wrappers.py  crewai.py  fastmcp.py  google_adk.py  langchain.py  langgraph.py  openai_agents.py  pydantic_ai.py
