[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolloom"
version = "0.1.0"
description = "Framework-neutral tool definitions for AI agents and MCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Toolloom contributors" }]
keywords = ["ai", "agents", "mcp", "tools", "langchain", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2"]
openai = ["openai-agents>=0.2"]
langchain = ["langchain>=0.3", "langgraph>=0.2"]
pydantic-ai = ["pydantic-ai"]
crewai = ["crewai"]
google-adk = ["google-adk"]
all = [
  "fastmcp>=2",
  "openai-agents>=0.2",
  "langchain>=0.3",
  "langgraph>=0.2",
  "pydantic-ai",
  "crewai",
  "google-adk",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
  "mypy>=1.10",
]

[project.scripts]
toolloom = "toolloom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["toolloom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["toolloom"]
